tests/src/frontend/typechecking/invalid/literal_pattern1.sk
fun matcher(value: Int): Int {
  value match {
  | true ->
    42 // type error
  | _ -> 43
  }
}
